# doclayout-ai

./: .env.example  .gitattributes  .gitignore  README-Dummies.md  README.fi.md  README.md  pyproject.toml
docs/: ERRORS.md  ROADMAP.md  SETUP.md
parsittavat/: README.md
requirements/: README.md  ocr-extras.txt  ocr-vl.txt
scripts/: _paddleocr_preload.py  _paddleocr_torch_dll_fix.pth  activate.ps1  install_cuda.ps1  install_dll_hook.ps1  install_paddleocr_vl.ps1  setup.ps1  verify_env.py
src/kuvien_parsinta/: __init__.py  cli.py  config.py  consolidate.py  device.py  encoding.py  fallback.py  flow.py  languages.py  models.py  output_paths.py  pipeline.py  router.py
src/kuvien_parsinta/engines/: __init__.py  artifacts.py  compare.py  hybrid.py  layout_merge.py  runner.py  (+3 more)
tests/regression/: paukku_helpers.py  test_final_text_cleanup_and_visual_warnings.py  test_metadata_strip_not_in_story_body.py  test_newspaper_content_completeness_paukku.py  test_newspaper_required_story_elements_rendered.py  test_newspaper_typography_roles.py  test_newspaper_visual_layout_metrics.py  test_structural_pdf_text_not_cropped.py
tests/unit/: structure_fixtures.py  test_crop_policy.py  test_device.py  test_document_pdf.py  test_encoding.py  test_engine_selection.py  test_facsimile_no_visible_ocr_overlay.py  test_fallback.py  test_flow.py  test_from_structure.py  test_hybrid.py  test_languages.py  test_layout_merge.py  test_layout_pdf.py  test_layout_structure.py  test_newspaper_template_renderer.py  test_ocr_json.py  test_output_paths.py  test_output_policy.py  test_photo_crop.py  test_primary_outputs.py  test_router.py  test_search_text_layer_no_duplicates.py  test_structural_pdf_not_facsimile.py  test_vl_engine_import_safe.py
(+36 files in other folders)
